# Agentic-Classroom-Management-Software

./: .gitignore  README.md  test_mongodb.py
agents/: .envrc.example  README.md  agent_service.py  attendance_service.py  config.py  db_setup.py  embeddings.json  requirements.txt
agents/class_agent/: __init__.py  agent.py  prompt.py
agents/tools/: __init__.py  attendance_monitoring.py  config.py  db_read_write.py  json_utils.py  setup.py  simple_test.py  test_db.py
agents/tools/train/: wanda maximoff.avif
backend/: db_setup.py  pyproject.toml
web/: README.md  fix-db.mjs  fix-db.ts  package-lock.json  package.json  server.ts
web/prisma/: dev.db  dev.db.bak  schema.prisma  seed.ts
web/prisma/migrations/20260415180703_init/: migration.sql
web/prisma/migrations/20260421000000_add_chat_conversation_metadata/: migration.sql
web/prisma/prisma/: dev.db
web/src/: proxy.ts
web/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
web/src/app/admin/: page.tsx
web/src/app/assistant/: page.tsx
web/src/app/attendance/: AttendanceCapture.tsx  ClassAttendanceSection.tsx  page.tsx
web/src/app/login/: page.tsx
web/src/app/pending/: page.tsx
web/src/components/: AlertBanner.tsx  AppShell.tsx  AuthProvider.tsx  ChatHistorySidebar.tsx  DashboardLayout.tsx  Sidebar.tsx  SocketProvider.tsx  StudentDashboardView.tsx  ThemeProvider.tsx
web/src/lib/: aiService.ts  auth.ts  classAgentClient.ts  demoDashboard.ts  mongo.ts  mongoStatus.ts  serializeMongoDoc.ts  socket.ts  studentDashboard.ts  utils.ts
web/src/store/: alerts.ts  auth.ts  chat.ts
(+54 files in other folders)
