[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Sarah Zain",email = "sarah04zain@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymongo (>=4.12.1,<5.0.0)"
]

[tool.poetry]
packages = [
        {include = "config.py"},
        {include = "db_setup.py"}
    ]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
